frontend/mongo-web-shell.css
.mws-border {
  height: 640px;
  text-align: left;
  border: 2px solid;
  border-radius: 25px;
  background-color: #000000;
  margin-top: 10px;
  margin-bottom: 10px;
}

.mws-area {
  height: 560px;
  margin-top: 20px;
  overflow-y: auto;
  color: #00e500;
  font-size: 20px;
  font-family: Terminal, monospace;
}

.mws-in-shell-response {
  list-style-type: none;
  margin-top: 0;
  margin-bottom: 0;
  height: 560px;
}

.mws-in-shell-response li {
  margin-top: 3px;
}

.mws-input {
  width: 98%;
  height: 40px;
  border: none;
  background-color: #000000;
  color: #00e500;
  font-size: 20px;
  font-family: Terminal, monospace;
  margin-left: 15px;
}

.mws-input:focus {
  outline: none;
}

